tests/snapshots/snapshots__budget_semver_functions_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 30 → level 1 (24 words)

clean.js
cmp.js
coerce.js
compare-build.js
compare-loose.js
compare.js
diff.js
eq.js
gt.js
gte.js
inc.js
lt.js
lte.js
major.js
minor.js
neq.js
parse.js
patch.js
prerelease.js
rcompare.js
rsort.js
satisfies.js
sort.js
valid.js
