tests/snapshots/snapshots__budget_semver_functions_subdir2.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 100 → level 3 (72 words)

clean.js
     4→const clean
cmp.js
    10→const cmp
coerce.js
     7→const coerce
compare-build.js
     4→const compareBuild
compare-loose.js
     4→const compareLoose
compare.js
     4→const compare
diff.js
     5→const diff
eq.js
     4→const eq
gt.js
     4→const gt
gte.js
     4→const gte
inc.js
     5→const inc
lt.js
     4→const lt
lte.js
     4→const lte
major.js
     4→const major
minor.js
     4→const minor
neq.js
     4→const neq
parse.js
     4→const parse
patch.js
     4→const patch
prerelease.js
     4→const prerelease
rcompare.js
     4→const rcompare
rsort.js
     4→const rsort
satisfies.js
     4→const satisfies
sort.js
     4→const sort
valid.js
     4→const valid
